@@ -1,0 +1,5 @@
+2007-10-28  Moritz  <moritz@g10code.com>
+
+	* gpg-error.m4: New.
+	* libgcrypt.m4: New.
+	* ksba.m4: New.
