@@ -1,3 +1,15 @@
+2007-10-28  Moritz  <moritz@g10code.com>
+
+	* configure.ac: Integrated KSBA support; call AM_PATH_KSBA.  Use
+	POLDI_ENABLE_FEATURE macro for --enable-x509-auth and
+	--enable-simpledb-auth arguments.  AC_DEFINE_UNQUOTED the symbols
+	NEED_LIBGCRYPT_VERSION and NEED_KSBA_VERSION.  Define
+	AM_CONDITIONAL for symbols AUTH_METHOD_X509 and
+	AUTH_METHOD_SIMPLEDB.  Print final status message.
+
+	* acinclude.m4: Added quoting; removed gpg-error and libgcrypt
+	related macros; new macro: POLDI_ENABLE_FEATURE.
+
 2007-10-27  Moritz  <moritz@g10code.com>
 
 	* configure.ac (AC_CONFIG_FILES): Removed reference to
